--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,12 +1,12 @@
 <Project>
   <PropertyGroup>
-    <TargetFrameworks>net48;net5.0;net6.0;net7.0;net8.0-windows;net9.0-windows;netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net48;net5.0;net6.0;net7.0;net8.0-windows;net9.0-windows;net10.0-windows;netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
     <!-- Defined variable for projects that do not support .NET Standard -->
-    <TargetFrameworksNotStd>net48;net6.0;net7.0;net8.0-windows;net9.0-windows;netcoreapp3.1</TargetFrameworksNotStd>
+    <TargetFrameworksNotStd>net48;net6.0;net7.0;net8.0-windows;net9.0-windows;net10.0-windows;netcoreapp3.1</TargetFrameworksNotStd>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
-    <Version>4.2.2</Version>
-    <PackageVersion>4.2.2</PackageVersion>
+    <Version>4.3.0</Version>
+    <PackageVersion>4.3.0</PackageVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <EnableUnsafeBinaryFormatterSerialization>true</EnableUnsafeBinaryFormatterSerialization>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
@@ -17,7 +17,7 @@
     <NeutralLanguage>en-US</NeutralLanguage>
     <Nullable>enable</Nullable>
     <SignAssembly>true</SignAssembly>
-    <NoWarn>$(NoWarn);NETSDK1138;SYSLIB0003;SYSLIB0004;SYSLIB0011;IL2026;IL2050;IL2075;IL2067;IL2070;IL2072;IL2077;IL2080;IL2087;IL2090;CS0618;CA1041;CA1401;CA1510;CA2101;SYSLIB1054;SYSLIB1096;</NoWarn>
+    <NoWarn>$(NoWarn);NETSDK1138;SYSLIB0003;SYSLIB0004;SYSLIB0011;IL2026;IL2050;IL2075;IL2067;IL2070;IL2072;IL2077;IL2080;IL2087;IL2090;CS0618;CA1041;CA1069;CA1401;CA1510;CA2101;SYSLIB1054;SYSLIB1096;</NoWarn>
     <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
